--- a/package.json
+++ b/package.json
@@ -16,14 +16,18 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
+    "axios": "^1.7.7",
     "expo": "~52.0.6",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
+    "expo-linear-gradient": "~14.0.1",
     "expo-linking": "~7.0.2",
+    "expo-location": "~18.0.1",
     "expo-router": "~4.0.5",
     "expo-splash-screen": "~0.29.9",
     "expo-status-bar": "~2.0.0",
@@ -33,7 +37,9 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.1",
+    "react-native-axios": "^0.17.1",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-maps": "^1.20.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.0.0",
