--- a/package.json
+++ b/package.json
@@ -43,8 +43,10 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.0.0",
+    "react-native-system-navigation-bar": "^2.6.4",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.2"
+    "react-native-webview": "13.12.2",
+    "expo-navigation-bar": "~4.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
