--- a/app.json
+++ b/app.json
@@ -9,12 +9,20 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "config": {
+        "googleMapsApiKey": "AIzaSyAYV_jinr0NBkaoRR4edDDzWxT3WCO3cN8"
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#014c55"
+      },
+      "config": {
+        "googleMaps": {
+          "apiKey": "AIzaSyAYV_jinr0NBkaoRR4edDDzWxT3WCO3cN8"
+        }
       },
       "package": "myf.v3"
     },
@@ -31,7 +39,7 @@
           "image": "./assets/images/splash-icon.png",
           "imageWidth": 200,
           "resizeMode": "contain",
-          "backgroundColor": "#ffffff"
+          "backgroundColor": "#014c55"
         }
       ]
     ],
