--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-linear-gradient": "~14.0.1",
     "expo-linking": "~7.0.2",
     "expo-location": "~18.0.1",
+    "expo-navigation-bar": "~4.0.3",
     "expo-router": "~4.0.5",
     "expo-splash-screen": "~0.29.9",
     "expo-status-bar": "~2.0.0",
@@ -44,9 +45,9 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.0.0",
     "react-native-system-navigation-bar": "^2.6.4",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.2",
-    "expo-navigation-bar": "~4.0.3"
+    "react-native-webview": "13.12.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
