--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.2",
     "expo-web-browser": "~14.0.1",
+    "form-data": "^4.0.1",
     "graphql": "^16.9.0",
+    "jotai": "^2.10.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.1",
